hard-gists/817977/run.log
=== Docker Run Log for 817977 ===
Started at: Mi 29. Okt 17:40:55 CET 2025

[2025-10-29 17:40:55] START: Running container for 817977
[2025-10-29 17:40:56] SUCCESS: Container 1c2ca7a0088b4f08e6a0def2cecc9fc0226e25a7da87dd2679373a8271eae2c1 started for 817977
=== Container logs for 817977 ===
  File "/snippet.py", line 43
    print theDictionary
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 817977 ===
[2025-10-29 17:40:58] INFO: Container 1c2ca7a0088b4f08e6a0def2cecc9fc0226e25a7da87dd2679373a8271eae2c1 has stopped
